kubemanifests/old/nginx.yml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hellos-site
   namespace: guestbook
 spec:
  selector:
    matchLabels:
      app: web
  replicas: 5
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: front-end
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: guestbook
spec:
  selector:
    app: web
  ports:
    - name: front-end
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: guestbook
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: guestbook.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8888
